Implement solution